deploy/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: workspace-proxy
spec:
  selector:
    app: workspace-proxy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9876
