deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-workspaces-proxy
spec:
  ingressClassName: nginx
  rules:
  - host: workspaces.localdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab-workspaces-proxy
            port:
              number: 80
  - host: "*.workspaces.localdev.me"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab-workspaces-proxy
            port:
              number: 80
  tls:
  - hosts:
    - "workspaces.localdev.me"
    secretName: gitlab-workspaces-proxy-tls
  - hosts:
    - "*.workspaces.localdev.me"
    secretName: gitlab-workspaces-wildcard-tls
